--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
   color: white;
 }
 html, body{
-  min-height: -webkit-fill-available;
+  max-width: 100vw;
 } 
 
 body {
@@ -33,7 +33,7 @@ img { width: 100%; height: auto; }
 
 .header{
   position: fixed;
-  width: 100%;
+  width: 100vw;
   height: 100px;
   background-color: rgba(0,0,0,0.5);
   z-index: 1000;
@@ -85,15 +85,18 @@ img { width: 100%; height: auto; }
 
 .content h2 {
   margin: 0 auto;
+  text-align: center;
   font-size: 6rem;
   font-weight: 700;
 }
 
 .content p {
   margin-top: 5rem;
-  width: 800px;
+  max-width: 800px;
+  width: 80%;
   font-weight: 500;
   font-size: 1.2rem;
+  text-align: center;
 }
 .section {
   width: 100%;
@@ -120,7 +123,6 @@ img { width: 100%; height: auto; }
 .section > h1 {
   font-size: 10rem;
   text-align: center;
-
 }
 
 .about-container {
@@ -172,7 +174,7 @@ img { width: 100%; height: auto; }
   width: 30%;
   border: rgb(64, 64, 64) solid 3px;
   border-radius: 20px;
-  padding-bottom: 5rem;
+  padding-bottom: 1rem;
 }
 
 .project-content > h1 {
@@ -190,14 +192,13 @@ img { width: 100%; height: auto; }
 }
 
 .project-links{
-  position: absolute;
-  bottom: 10px;
   align-self: center;
 }
 .project-links button{
   border: #000 solid 2px;
   background-color: rgb(28, 28, 28);
   padding: 1rem;
+  margin: 1rem;
   transition: background-color 0.25s;
 }
 .project-links button:hover{
@@ -210,7 +211,7 @@ img { width: 100%; height: auto; }
 }
 
 #contact-heading {
-  font-size: 7rem;
+  padding: 1rem;
 }
 
 .contact {
@@ -284,7 +285,11 @@ img { width: 100%; height: auto; }
   cursor: pointer;
 }
 
-@media (max-width: 1350px) {
+@media (max-width: 1350px) { 
+  .section > h1 {
+    font-size: 4rem;
+    text-align: center;
+  }
  .projects {
   flex-direction: column;
   justify-content: center;
@@ -293,4 +298,20 @@ img { width: 100%; height: auto; }
  .project-content {
   width: 70%;
  }
+}
+
+@media screen and (max-width: 750px) {
+  .skill {
+    height: 75px;
+    width: auto;
+  }
+  .items {
+    font-size: 0.8rem;
+    gap: 1rem;
+    padding-right: 1rem;
+  }
+  .logo {
+    margin-left: 1rem;
+    font-size: 2.5rem;
+  }
 }
